src/rust/dcmfx_cli/tests/snapshots/modify__explicit_vr_little_endian_monochrome1_to_monochrome2_before.snap
---
source: dcmfx_cli/tests/modify.rs
expression: get_stdout(assert)
snapshot_kind: text
---
(0002,0001) OB File Meta Information Version        [     2 bytes] [00 01]
(0002,0002) UI Media Storage SOP Class UID          [    26 bytes] "1.2.840 … (Computed Radiography Image Storage)
(0002,0003) UI Media Storage SOP Instance UID       [    48 bytes] "1.3.6.1.4. …
(0002,0010) UI Transfer Syntax UID                  [    20 bytes] "1.2.840 … (Explicit VR Little Endian)
(0002,0012) UI Implementation Class UID             [    18 bytes] "1.3.6.1.4. …
(0002,0013) SH Implementation Version Name          [    10 bytes] "DCTOOL100"
(0002,0016) AE Source Application Entity Title      [     8 bytes] "CLUNIE1"
(0008,0005) CS Specific Character Set               [    10 bytes] "ISO_IR 192"
(0008,0008) CS Image Type                           [    16 bytes] "DERIVED",  …
(0008,0012) DA Instance Creation Date               [     8 bytes] 2001-01-01
(0008,0013) TM Instance Creation Time               [     6 bytes] 05:52:36
(0008,0014) UI Instance Creator UID                 [    18 bytes] "1.3.6.1.4. …
(0008,0016) UI SOP Class UID                        [    26 bytes] "1.2.840 … (Computed Radiography Image Storage)
(0008,0018) UI SOP Instance UID                     [    48 bytes] "1.3.6.1.4. …
(0008,0020) DA Study Date                           [     8 bytes] 2001-01-01
(0008,0022) DA Acquisition Date                     [     8 bytes] 2001-01-01
(0008,0030) TM Study Time                           [     6 bytes] 00:00:00
(0008,0032) TM Acquisition Time                     [     6 bytes] 00:00:00
(0008,0050) SH Accession Number                     [     2 bytes] "2"
(0008,0060) CS Modality                             [     2 bytes] "CR" (Computed Radiography)
(0008,0070) LO Manufacturer                         [    16 bytes] "Agfa-Gevae …
(0008,0090) PN Referring Physician's Name           [     0 bytes] ""
(0008,0201) SH Timezone Offset From UTC             [     6 bytes] "+0000"
(0008,1030) LO Study Description                    [    28 bytes] "XR C Spine …
(0008,103E) LO Series Description                   [    12 bytes] "Cervical L …
(0008,1090) LO Manufacturer's Model Name            [     8 bytes] "ADC_5146"
(0010,0010) PN Patient's Name                       [    14 bytes] "Doe^Archib …
(0010,0020) LO Patient ID                           [     8 bytes] "77654033"
(0010,0030) DA Patient's Birth Date                 [     0 bytes] ""
(0010,0040) CS Patient's Sex                        [     0 bytes] ""
(0010,1010) AS Patient's Age                        [     4 bytes] 47 years
(0010,21B0) LT Additional Patient History           [     0 bytes] ""
(0010,4000) LT Patient Comments                     [     0 bytes] ""
(0012,0062) CS Patient Identity Removed             [     4 bytes] "YES"
(0012,0063) LO De-identification Method             [   144 bytes] "dcanon", " …
(0018,0015) CS Body Part Examined                   [     6 bytes] "CSPINE"
(0018,0060) DS KVP                                  [     2 bytes] "0"
(0018,1020) LO Software Versions                    [     8 bytes] "acp_3403"
(0018,1041) DS Contrast/Bolus Volume                [     2 bytes] "0"
(0018,1044) DS Contrast/Bolus Total Dose            [     2 bytes] "0"
(0018,1152) IS Exposure                             [     2 bytes] "0"
(0018,1164) DS Imager Pixel Spacing                 [    14 bytes] "0.1000", " …
(0018,1190) DS Focal Spot(s)                        [     0 bytes] ""
(0018,1260) SH Plate Type                           [     6 bytes] "code35"
(0018,1401) LO Acquisition Device Processing Code   [     6 bytes] "10090"
(0018,1402) CS Cassette Orientation                 [     8 bytes] "PORTRAIT"
(0018,1403) CS Cassette Size                        [     0 bytes] ""
(0018,1404) US Exposures on Plate                   [     2 bytes] 1163
(0018,5100) CS Patient Position                     [     0 bytes] ""
(0018,5101) CS View Position                        [     2 bytes] "LL" (Left Lateral)
(0018,6000) DS Sensitivity                          [     4 bytes] "400"
(0019,0010) LO Private Creator                      [     4 bytes] "AGFA"
(0019,1010) LO Private Identification Code          [    94 bytes] "MC=3", "EC …
(0019,1013) LO Sensitometry Name                    [     4 bytes] "NK5"
(0019,1015) LO Dose Monitoring List                 [    16 bytes] "2.06822395 …
(0019,1060) US Total number of series               [     2 bytes] 5
(0019,1065) US Number of images in study to be transmitted (only sent with autoverify: on)  [     2 bytes] 1
(0019,1070) US Total number of images               [     2 bytes] 1
(0019,1082) US Zoom factor                          [     2 bytes] 100
(0019,1093) CS Status                               [    10 bytes] "COMPLETED"
(0020,000D) UI Study Instance UID                   [    46 bytes] "1.3.6.1.4. …
(0020,000E) UI Series Instance UID                  [    48 bytes] "1.3.6.1.4. …
(0020,0010) SH Study ID                             [     2 bytes] "2"
(0020,0011) IS Series Number                        [     2 bytes] "1"
(0020,0013) IS Instance Number                      [     2 bytes] "1"
(0020,0020) CS Patient Orientation                  [     4 bytes] "L", "F"
(0020,0060) CS Laterality                           [     0 bytes] ""
(0020,4000) LT Image Comments                       [     4 bytes] "^^^^"
(0028,0002) US Samples per Pixel                    [     2 bytes] 1
(0028,0004) CS Photometric Interpretation           [    12 bytes] "MONOCHROME1"
(0028,0010) US Rows                                 [     2 bytes] 16
(0028,0011) US Columns                              [     2 bytes] 16
(0028,0034) IS Pixel Aspect Ratio                   [     0 bytes] ""
(0028,0100) US Bits Allocated                       [     2 bytes] 16
(0028,0101) US Bits Stored                          [     2 bytes] 12
(0028,0102) US High Bit                             [     2 bytes] 11
(0028,0103) US Pixel Representation                 [     2 bytes] 0
(0028,0106) US Smallest Image Pixel Value           [     2 bytes] 0
(0028,0107) US Largest Image Pixel Value            [     2 bytes] 0
(0028,1050) DS Window Center                        [     4 bytes] "1600"
(0028,1051) DS Window Width                         [     4 bytes] "2800"
(0028,1052) DS Rescale Intercept                    [     4 bytes] "200"
(0028,1053) DS Rescale Slope                        [     6 bytes] "0.684"
(0028,1054) LO Rescale Type                         [     2 bytes] "OD"
(0028,3003) LO LUT Explanation                      [     4 bytes] "NK5"
(2020,0020) CS Polarity                             [     6 bytes] "NORMAL"
(300A,0212) IS Source Number                        [     0 bytes] ""
(300A,0214) CS Source Type                          [     0 bytes] ""
(300E,0002) CS Approval Status                      [     8 bytes] "CREATED"
(7FE0,0010) OW Pixel Data                           [   512 bytes] [CA 07 EF 0 …
